--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "postinstall": "jetify"
   },
   "dependencies": {
+    "axios": "^0.19.0",
+    "date-fns": "^2.0.0-beta.5",
+    "immer": "^3.2.0",
     "install": "^0.13.0",
     "jetifier": "^1.6.4",
     "prop-types": "^15.7.2",
@@ -23,6 +26,7 @@
     "reactotron-redux": "^3.1.1",
     "reactotron-redux-saga": "^4.2.2",
     "redux": "^4.0.4",
+    "redux-persist": "^5.10.0",
     "redux-saga": "^1.0.5",
     "styled-components": "^4.3.2"
   },
